[gd_scene load_steps=4 format=3 uid="uid://crq8o12chnfi7"]

[ext_resource type="Script" uid="uid://dwc2qxma8u51r" path="res://Scripts/hbox_1stblk_para.gd" id="1_fc0h3"]
[ext_resource type="Script" uid="uid://7dgnqukr0xy2" path="res://Scripts/hbox_blk_para.gd" id="2_fc0h3"]
[ext_resource type="LabelSettings" uid="uid://c4gn2t32fjvcx" path="res://config_label_settings.tres" id="3_u5vwc"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_right = -10.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 153.0
offset_bottom = 58.0
scale = Vector2(2.50457, 2.40063)

[node name="Label" type="Label" parent="VBox"]
layout_mode = 2
text = "How many bloocks?"

[node name="LineEdit" type="LineEdit" parent="VBox"]
layout_mode = 2

[node name="btnBox" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 610.0
offset_right = 651.0
offset_bottom = 641.0

[node name="Button" type="Button" parent="btnBox"]
layout_mode = 2
text = "Save and Start
"
icon_alignment = 1

[node name="GridContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 250.0
offset_right = 1150.0
offset_bottom = 370.0

[node name="HBox_BLK1" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2
script = ExtResource("1_fc0h3")

[node name="Label" type="Label" parent="GridContainer/HBox_BLK1"]
layout_mode = 2
size_flags_horizontal = 4
text = "BLK 1  "

[node name="blkPara_chance" type="VBoxContainer" parent="GridContainer/HBox_BLK1"]
layout_mode = 2

[node name="Label2" type="Label" parent="GridContainer/HBox_BLK1/blkPara_chance"]
layout_mode = 2
text = " chance-LIST  "
label_settings = ExtResource("3_u5vwc")
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="GridContainer/HBox_BLK1/blkPara_chance"]
layout_mode = 2

[node name="blkPara_distr_type" type="VBoxContainer" parent="GridContainer/HBox_BLK1"]
layout_mode = 2

[node name="Label2" type="Label" parent="GridContainer/HBox_BLK1/blkPara_distr_type"]
layout_mode = 2
text = "  distribution  "
label_settings = ExtResource("3_u5vwc")
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="GridContainer/HBox_BLK1/blkPara_distr_type"]
layout_mode = 2
item_count = 2
popup/item_0/text = "norm"
popup/item_0/id = 0
popup/item_1/text = "flat"
popup/item_1/id = 1

[node name="blkPara_distr_para_1" type="VBoxContainer" parent="GridContainer/HBox_BLK1"]
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/HBox_BLK1/blkPara_distr_para_1"]
layout_mode = 2
text = "  [0,0.7,0.8,0.9,0.95,0.75] "
label_settings = ExtResource("3_u5vwc")
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="GridContainer/HBox_BLK1/blkPara_distr_para_1"]
layout_mode = 2

[node name="blkPara_distr_para_2" type="VBoxContainer" parent="GridContainer/HBox_BLK1"]
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/HBox_BLK1/blkPara_distr_para_2"]
layout_mode = 2
text = "  [0,0.7,0.8,0.9,]  "
label_settings = ExtResource("3_u5vwc")
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="GridContainer/HBox_BLK1/blkPara_distr_para_2"]
layout_mode = 2

[node name="blkPara_value_list" type="VBoxContainer" parent="GridContainer/HBox_BLK1"]
layout_mode = 2

[node name="Label2" type="Label" parent="GridContainer/HBox_BLK1/blkPara_value_list"]
layout_mode = 2
text = "  h_value-LIST  "
label_settings = ExtResource("3_u5vwc")
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="GridContainer/HBox_BLK1/blkPara_value_list"]
layout_mode = 2

[node name="blkPara_value_list2" type="VBoxContainer" parent="GridContainer/HBox_BLK1"]
layout_mode = 2

[node name="Label2" type="Label" parent="GridContainer/HBox_BLK1/blkPara_value_list2"]
layout_mode = 2
text = "  o_value-LIST  "
label_settings = ExtResource("3_u5vwc")
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="GridContainer/HBox_BLK1/blkPara_value_list2"]
layout_mode = 2

[node name="blkPara_tr_num_num_range" type="VBoxContainer" parent="GridContainer/HBox_BLK1"]
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/HBox_BLK1/blkPara_tr_num_num_range"]
layout_mode = 2
text = "  tr num range  "
label_settings = ExtResource("3_u5vwc")
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="GridContainer/HBox_BLK1/blkPara_tr_num_num_range"]
layout_mode = 2

[node name="HBox_BLK2" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
script = ExtResource("2_fc0h3")

[node name="Label" type="Label" parent="GridContainer/HBox_BLK2"]
layout_mode = 2
size_flags_horizontal = 4
text = "BLK 2  "

[node name="blkPara_change_distr_or_chance" type="VBoxContainer" parent="GridContainer/HBox_BLK2"]
layout_mode = 2

[node name="Label2" type="Label" parent="GridContainer/HBox_BLK2/blkPara_change_distr_or_chance"]
layout_mode = 2
text = "change"
label_settings = ExtResource("3_u5vwc")
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="GridContainer/HBox_BLK2/blkPara_change_distr_or_chance"]
layout_mode = 2
item_count = 3
popup/item_0/text = "chance"
popup/item_0/id = 0
popup/item_1/text = "distribution"
popup/item_1/id = 1
popup/item_2/text = "random"
popup/item_2/id = 2

[node name="blkPara_chance" type="VBoxContainer" parent="GridContainer/HBox_BLK2"]
layout_mode = 2

[node name="Label2" type="Label" parent="GridContainer/HBox_BLK2/blkPara_chance"]
layout_mode = 2
text = " chance-LIST  "
label_settings = ExtResource("3_u5vwc")
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="GridContainer/HBox_BLK2/blkPara_chance"]
layout_mode = 2

[node name="blkPara_distr_type" type="VBoxContainer" parent="GridContainer/HBox_BLK2"]
layout_mode = 2

[node name="Label2" type="Label" parent="GridContainer/HBox_BLK2/blkPara_distr_type"]
layout_mode = 2
text = "  distribution  "
label_settings = ExtResource("3_u5vwc")
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="GridContainer/HBox_BLK2/blkPara_distr_type"]
layout_mode = 2
item_count = 2
popup/item_0/text = "norm"
popup/item_0/id = 0
popup/item_1/text = "flat"
popup/item_1/id = 1

[node name="blkPara_distr_para_1" type="VBoxContainer" parent="GridContainer/HBox_BLK2"]
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/HBox_BLK2/blkPara_distr_para_1"]
layout_mode = 2
text = "  [0,0.7,0.8,0.9,0.95,0.75] "
label_settings = ExtResource("3_u5vwc")
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="GridContainer/HBox_BLK2/blkPara_distr_para_1"]
layout_mode = 2

[node name="blkPara_distr_para_2" type="VBoxContainer" parent="GridContainer/HBox_BLK2"]
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/HBox_BLK2/blkPara_distr_para_2"]
layout_mode = 2
text = "  [0,0.7,0.8,0.9,]  "
label_settings = ExtResource("3_u5vwc")
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="GridContainer/HBox_BLK2/blkPara_distr_para_2"]
layout_mode = 2

[node name="blkPara_value_list" type="VBoxContainer" parent="GridContainer/HBox_BLK2"]
layout_mode = 2

[node name="Label2" type="Label" parent="GridContainer/HBox_BLK2/blkPara_value_list"]
layout_mode = 2
text = "  h_value-LIST  "
label_settings = ExtResource("3_u5vwc")
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="GridContainer/HBox_BLK2/blkPara_value_list"]
layout_mode = 2

[node name="blkPara_value_list2" type="VBoxContainer" parent="GridContainer/HBox_BLK2"]
layout_mode = 2

[node name="Label2" type="Label" parent="GridContainer/HBox_BLK2/blkPara_value_list2"]
layout_mode = 2
text = "  o_value-LIST  "
label_settings = ExtResource("3_u5vwc")
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="GridContainer/HBox_BLK2/blkPara_value_list2"]
layout_mode = 2

[node name="blkPara_tr_num_num_range" type="VBoxContainer" parent="GridContainer/HBox_BLK2"]
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/HBox_BLK2/blkPara_tr_num_num_range"]
layout_mode = 2
text = "  tr num range  "
label_settings = ExtResource("3_u5vwc")
horizontal_alignment = 1

[node name="LineEdit" type="LineEdit" parent="GridContainer/HBox_BLK2/blkPara_tr_num_num_range"]
layout_mode = 2
